# r6rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  flake.nix  hiibolt.txt  result
.github/workflows/: main.yml
assets/: README_TEMPLATE.md  bot_data.json  data.json  id_list.json  market_data.json  query.txt  query_owned.txt
sherlock/sherlock/: notify.py  requirements.txt  sherlock.py
src/: main.rs
src/admin/: mod.rs
src/apis/: bulkvs.rs  database.rs  hashcat.rs  mod.rs  sherlock.rs  snusbase.rs  ubisoft.rs
src/auth/: mod.rs
src/bans/: mod.rs
src/commands/: announce_all.rs  announce_econ.rs  announce_opsec.rs  announce_osint.rs  development.rs  mod.rs
src/econ/: mod.rs
src/help/: mod.rs
src/helper/: bot.rs  command.rs  lib.rs  mod.rs  print.rs  startup.rs
src/lib/: mod.rs
src/opsec/: mod.rs
src/osint/: mod.rs
src/sections/: admin.rs  econ.rs  mod.rs  opsec.rs  osint.rs
src/snusbase/: mod.rs
