[package]
name = "r6rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
plotpy = "0.6.1"
reqwest = "0.11.24"
serde_json = "1.0.114"
serenity = { version = "0.12", features = ["full", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "process"] }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
