[package]
name = "r6rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-recursion = "1.1.1"
base64 = "0.22.0"
futures = "0.3.30"
itertools = "0.13.0"
plotpy = "1.0.0"
rand = "0.8.5"
regex = "1.10.5"
reqwest = "0.11.24"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.114"
serenity = { version = "0.12", features = ["full", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "process"] }
tungstenite = { version = "0.23.0", features = ["native-tls"] }
ureq = { version = "2.9.7", features = ["json"] }
url = "2.5.0"
