[package]
name = "r6rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-recursion = "1"
axum = "0.7"
base64 = "0.22"
colored = "2"
futures = "0.3"
itertools = "0.13"
plotpy = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["socks"] }
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", features = ["full", "model"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
tungstenite = { version = "0.23", features = ["native-tls"] }
ureq = { version = "2", features = ["json"] }
url = "2.5"
